hn_tests/opt/failing/comp-1.hn
ii x = incr (incr 5)